RESOLVED FIXED 261997
[css-shapes] Fix serialization of shape-outside
https://bugs.webkit.org/show_bug.cgi?id=261997
Summary [css-shapes] Fix serialization of shape-outside
Joonghun Park
Reported 2023-09-23 05:33:52 PDT
This change make css property 'shape-outside' not include 'margin-box' in serialization result because it is implied.
Attachments
Tim Nguyen (:ntim)
Comment 1 2023-09-23 13:14:06 PDT
*** Bug 261904 has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 2 2023-09-23 13:14:22 PDT
I have a patch for this.
Radar WebKit Bug Importer
Comment 3 2023-09-23 13:14:39 PDT
Tim Nguyen (:ntim)
Comment 4 2023-09-23 13:18:31 PDT
EWS
Comment 5 2023-09-23 15:41:39 PDT
Committed 268365@main (5e57291ddc43): <https://commits.webkit.org/268365@main> Reviewed commits have been landed. Closing PR #18123 and removing active labels.
Joonghun Park
Comment 6 2023-09-24 05:59:21 PDT
Ah, you already reported the same bug. Thank you for closing this one:)
Note You need to log in before you can comment on or make changes to this bug.