[css-shapes] Fix serialization of shape-outside https://bugs.webkit.org/show_bug.cgi?id=261997 rdar://115938310

Reviewed by Simon Fraser.

Two main changes:
- Serialization now is in canonical order per-spec (<basic-shape> first, then <shape-box>)
- We now omit `margin-box` from serialization since it is the default value

This now also auto-generates the parsing of <shape-box>.

* LayoutTests/TestExpectations:
* LayoutTests/fast/shapes/parsing/parsing-shape-outside-expected.txt:
* LayoutTests/fast/shapes/parsing/parsing-test-utils.js:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/parsing/shape-outside-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/parsing/shape-outside-valid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/values/shape-outside-shape-box-pair-000-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/spec-examples/shape-outside-018-expected.txt:
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-shapes/spec-examples/shape-outside-018-expected.txt: Removed.
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeShapeOutside):

Canonical link: https://commits.webkit.org/268365@main